// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom branding doesn't show anything if no branding is defined 1`] = `<div />`;

exports[`custom branding with inline=false shows an image if branding logo is defined 1`] = `
<div>
  <img
    class="regular-size"
    src="mockBrandingUrl"
  />
</div>
`;

exports[`custom branding with inline=false shows an text if branding text is defined 1`] = `
<div>
  <span
    class="regular-size"
  >
    mockedBranding
  </span>
</div>
`;

exports[`custom branding with inline=false will prefer the logo over the text 1`] = `
<div>
  <img
    alt="mockedBranding"
    class="regular-size"
    src="mockBrandingUrl"
    title="mockedBranding"
  />
</div>
`;

exports[`custom branding with inline=true shows an image if branding logo is defined 1`] = `
<div>
  <img
    class="inline-logo"
    src="mockBrandingUrl"
  />
</div>
`;

exports[`custom branding with inline=true shows an text if branding text is defined 1`] = `
<div>
  <span
    class="inline-text"
  >
    mockedBranding
  </span>
</div>
`;

exports[`custom branding with inline=true will prefer the logo over the text 1`] = `
<div>
  <img
    alt="mockedBranding"
    class="inline-logo"
    src="mockBrandingUrl"
    title="mockedBranding"
  />
</div>
`;

exports[`custom branding with inline=undefined shows an image if branding logo is defined 1`] = `
<div>
  <img
    class="regular-size"
    src="mockBrandingUrl"
  />
</div>
`;

exports[`custom branding with inline=undefined shows an text if branding text is defined 1`] = `
<div>
  <span
    class="regular-size"
  >
    mockedBranding
  </span>
</div>
`;

exports[`custom branding with inline=undefined will prefer the logo over the text 1`] = `
<div>
  <img
    alt="mockedBranding"
    class="regular-size"
    src="mockBrandingUrl"
    title="mockedBranding"
  />
</div>
`;
